load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "cute_c2_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_c2.h"],
    local_defines = ["CUTE_C2_IMPLEMENTATION"],
)

cc_library(
    name = "cute_c2",
    hdrs = ["cute_c2.h"],
    deps = [":cute_c2_impl"],
)

cc_library(
    name = "cute_coroutine_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_coroutine.h"],
    local_defines = ["CUTE_COROUTINE_IMPLEMENTATION"],
)

cc_library(
    name = "cute_coroutine",
    hdrs = ["cute_coroutine.h"],
    deps = [":cute_coroutine_impl"],
)

cc_library(
    name = "cute_sound_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_sound.h"],
    local_defines = ["CUTE_SOUND_IMPLEMENTATION"],
)

cc_library(
    name = "cute_sound",
    hdrs = ["cute_sound.h"],
    deps = [":cute_sound_impl"],
)

cc_library(
    name = "cute_time_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_time.h"],
    local_defines = ["CUTE_TIME_IMPLEMENTATION"],
)

cc_library(
    name = "cute_time",
    hdrs = ["cute_time.h"],
    deps = [":cute_time_impl"],
)

cc_library(
    name = "cute_memfile_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_memfile.h"],
    local_defines = ["CUTE_MEMFILE_IMPLEMENTATION"],
)

cc_library(
    name = "cute_memfile",
    hdrs = ["cute_memfile.h"],
    deps = [":cute_memfile_impl"],
)

cc_library(
    name = "cute_files_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_files.h"],
    local_defines = ["CUTE_FILES_IMPLEMENTATION"],
)

cc_library(
    name = "cute_files",
    hdrs = ["cute_files.h"],
    deps = [":cute_files_impl"],
)

cc_library(
    name = "cute_sid_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_sid.h"],
    local_defines = ["CUTE_SID_IMPLEMENTATION"],
)

cc_library(
    name = "cute_sid",
    hdrs = ["cute_sid.h"],
    deps = [":cute_sid_impl"],
)

cc_library(
    name = "cute_math_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_math.h"],
    local_defines = ["CUTE_MATH_IMPLEMENTATION"],
)

cc_library(
    name = "cute_math",
    hdrs = ["cute_math.h"],
    deps = [":cute_math_impl"],
)

cc_library(
    name = "cute_png_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_png.h"],
    local_defines = ["CUTE_PNG_IMPLEMENTATION"],
)

cc_library(
    name = "cute_png",
    hdrs = ["cute_png.h"],
    deps = [":cute_png_impl"],
)

cc_library(
    name = "cute_gl_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_gl.h"],
    local_defines = ["CUTE_GL_IMPLEMENTATION"],
)

cc_library(
    name = "cute_gl",
    hdrs = ["cute_gl.h"],
    deps = [":cute_gl_impl"],
)

cc_library(
    name = "cute_utf_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_utf.h"],
    local_defines = ["CUTE_UTF_IMPLEMENTATION"],
)

cc_library(
    name = "cute_utf",
    hdrs = ["cute_utf.h"],
    deps = [":cute_utf_impl"],
)

cc_library(
    name = "cute_huff_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_huff.h"],
    local_defines = ["CUTE_HUFF_IMPLEMENTATION"],
)

cc_library(
    name = "cute_huff",
    hdrs = ["cute_huff.h"],
    deps = [":cute_huff_impl"],
)

cc_library(
    name = "cute_spheremesh_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_spheremesh.h"],
    local_defines = ["CUTE_SPHEREMESH_IMPLEMENTATION"],
)

cc_library(
    name = "cute_spheremesh",
    hdrs = ["cute_spheremesh.h"],
    deps = [":cute_spheremesh_impl"],
)

cc_library(
    name = "cute_path_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_path.h"],
    local_defines = ["CUTE_PATH_IMPLEMENTATION"],
)

cc_library(
    name = "cute_path",
    hdrs = ["cute_path.h"],
    deps = [":cute_path_impl"],
)

cc_library(
    name = "cute_alloc_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_alloc.h"],
    local_defines = ["CUTE_ALLOC_IMPLEMENTATION"],
)

cc_library(
    name = "cute_alloc",
    hdrs = ["cute_alloc.h"],
    deps = [":cute_alloc_impl"],
)

cc_library(
    name = "cute_math2d_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_math2d.h"],
    local_defines = ["CUTE_MATH2D_IMPLEMENTATION"],
)

cc_library(
    name = "cute_math2d",
    hdrs = ["cute_math2d.h"],
    deps = [":cute_math2d_impl"],
)

cc_library(
    name = "cute_spritebatch_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_spritebatch.h"],
    local_defines = ["CUTE_SPRITEBATCH_IMPLEMENTATION"],
)

cc_library(
    name = "cute_spritebatch",
    hdrs = ["cute_spritebatch.h"],
    deps = [":cute_spritebatch_impl"],
)

cc_library(
    name = "cute_tiled_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_tiled.h"],
    local_defines = ["CUTE_TILED_IMPLEMENTATION"],
)

cc_library(
    name = "cute_tiled",
    hdrs = ["cute_tiled.h"],
    deps = [":cute_tiled_impl"],
)

cc_library(
    name = "cute_filewatch_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_filewatch.h"],
    local_defines = ["CUTE_FILEWATCH_IMPLEMENTATION"],
)

cc_library(
    name = "cute_filewatch",
    hdrs = ["cute_filewatch.h"],
    deps = [":cute_filewatch_impl"],
)

cc_library(
    name = "cute_ani_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_ani.h"],
    local_defines = ["CUTE_ANI_IMPLEMENTATION"],
)

cc_library(
    name = "cute_ani",
    hdrs = ["cute_ani.h"],
    deps = [":cute_ani_impl"],
)

cc_library(
    name = "cute_font_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_font.h"],
    local_defines = ["CUTE_FONT_IMPLEMENTATION"],
)

cc_library(
    name = "cute_font",
    hdrs = ["cute_font.h"],
    deps = [":cute_font_impl"],
)

cc_library(
    name = "cute_sync_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_sync.h"],
    local_defines = ["CUTE_SYNC_IMPLEMENTATION"],
)

cc_library(
    name = "cute_sync",
    hdrs = ["cute_sync.h"],
    deps = [":cute_sync_impl"],
)

cc_library(
    name = "cute_serialize_impl",
    visibility = ["//visibility:private"],
    srcs = ["cute_serialize.h"],
    local_defines = ["CUTE_SERIALIZE_IMPLEMENTATION"],
)

cc_library(
    name = "cute_serialize",
    hdrs = ["cute_serialize.h"],
    deps = [":cute_serialize_impl"],
)
